--- a/index.html
+++ b/index.html
@@ -10,47 +10,75 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 
 </head>
-
-<body>
-	<div class="bg-info p-5 rounded-lg m-1">
-		<h1 class="display-1">TLB Mobile Notary</h1>
-		<hr class="my-2">
-		<p class="lead" align=center>Fully Bonded and Insured</p>
-		<a href="https://www.facebook.com/tlbmobilenotaryservices">
-  <img src="FB.jpeg" alt="" height="75">
-</a>
+<main id="mainborder">
+	<body>
+		<!--Facebook page plugin jscript-->
+		<div id="fb-root"></div>
+		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v9.0" nonce="QH8E2NQh"></script>
 
 
-	</div>
-	<div class="container-fluid">
-		<div class="row-header">
-			<div class="col-xs-6">
-			<div class="col-xs-6">
 
-				<section id="services">
-			<h2>Serving your neck of the woods!</h2>
 
-		   	<ul>
-			    <li>Acknowledgements</li>
-			    <li>Oaths or affirmations</li>
-			    <li>Verification oath or affirmation (affidavits)</li>
-			    <li>Witnessing or attesting a signature</li>
-			    <li>Certifying or attesting a copy or deposition</li>
-			  </ul>
-				</section>
+		<div class="container-fluid">
+			<div class="row-header">
+				<div class="col-xs-6">
+				<div class="col-xs-6">
 
-				<br>
-				<section id="contact">
-					<h2>Contact Info:</h2>
-					<p>Tamara Balliet, owner</p>
-						<p>Cell Phone# (484)-262-9278</p>
-						<p>Email: </p>
+					<section id="header"
+						<h1 class="display-1">TLB Mobile Notary</h1>
+						<hr class="my-2">
+						<p class="lead" align=center>Fully Bonded and Insured</p>
+					</section>
+					<br>
+
+					<section id="services">
+				<h1>Serving your neck of the woods!</h1>
+
+			   	<ul class="list-unstyled">
+				    <li>Acknowledgements</li>
+				    <li>Oaths or affirmations</li>
+				    <li>Verification oath or affirmation (affidavits)</li>
+				    <li>Witnessing or attesting a signature</li>
+				    <li>Certifying or attesting a copy or deposition</li>
+				  </ul>
+					</section>
+
+					<br>
+					<section id="contact">
+						<h2>Contact Info:</h2>
+						<ul class="list-unstyled">
+							<li>Tamara Balliet, owner</li>
+							<li>Cell Phone# (484)-262-9278</li>
+							<li>Email: </li>
+						</ul>
 						<a href="mailto:tlbmobilenote@gmail.com">tlbmobilenote@gmail.com</a>
+
 				</div>
-				</section>
+							<br>
+							<!--Image for FB link-->
+							<a href="https://www.facebook.com/tlbmobilenotaryservices">
+							<img src="FBShattered.jpeg" alt="Visit my FB site" height="40">
+						</a>
+						<a class="btn btn-secondary" href="https://www.facebook.com/tlbmobilenotaryservices" role="button">Link to my FB</a>
+						<a class="btn btn-secondary" href="tel:4842629278" role="button">Call me</a>
+						<a class="btn btn-secondary" href="mailto:tlbmobilenote@gmail.com" role="button">Email me</a>
+
+					</section>
+					</div>
+				</div>
 			</div>
-		</div>
-	</div>
-</div>
-</body>
+					<!--not displaying addin UI -->
+					<!--<section id="social">
+						<div class="fb-page" data-href="https://www.facebook.com/SkiBlueMt" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/SkiBlueMt" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/tamaralynn1971">Facebook</a></blockquote></div>
+
+						<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+					</section>-->
+
+					<section id="legaldisclaim">
+						<p><em>Note: I am not an attorney licensed to practice law in this Commonwealth. I am not allowed to draft legal records, give advice on legal matters, including immigration, or charge a fee for those activities.</em></p>
+					</section>
+
+
+	</body>
+</main>
 </html>
