--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 
-</head>
-<main id="mainborder">
+	<main id="mainborder">
 	<body>
 		<!--Facebook page plugin jscript-->
 		<div id="fb-root"></div>
