--- a/index.html
+++ b/index.html
@@ -20,22 +20,76 @@
 					<section id="header"
 						<h1 class="display-1">TLB Mobile Notary</h1>
 						<hr class="my-2">
-						<p class="lead" align=center>Fully Bonded and Insured</p>
+						<p class="lead" align=center>Certified and Bonded</p>
 					</section>
 					<br>
 
 					<section id="services">
 				<h1>Serving your neck of the woods!</h1>
 
-			   	<ul class="list-unstyled">
-				    <li>Acknowledgements</li>
-				    <li>Oaths or affirmations</li>
-				    <li>Verification oath or affirmation (affidavits)</li>
-				    <li>Witnessing or attesting a signature</li>
-				    <li>Certifying or attesting a copy or deposition</li>
-				  </ul>
-					</section>
 
+					<!--Dropdowns-->
+					<div class="accordion accordion-flush" id="accordionFlushExample">
+							  <div class="accordion-item">
+							    <h2 class="accordion-header" id="flush-headingOne">
+							      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+							        Services:
+							      </button>
+							    </h2>
+							    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+							      <div class="accordion-body">
+											<ul class="list-unstyled">
+										    <li>Acknowledgements</li>
+										    <li>Oaths or affirmations</li>
+										    <li>Verification oath or affirmation (affidavits)</li>
+										    <li>Witnessing or attesting a signature</li>
+										    <li>Certifying or attesting a copy or deposition</li>
+										  </ul>
+							      </div>
+							    </div>
+							  </div>
+							  <div class="accordion-item">
+							    <h2 class="accordion-header" id="flush-headingTwo">
+							      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+							        Types of Documents to Notarize:
+							      </button>
+							    </h2>
+							    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+							      <div class="accordion-body">
+											<ul class="list-unstyled">
+										    <li>Notarization of any legal document</li>
+										    <li>Divorce Papers</li>
+										    <li>Address Changes</li>
+										    <li>Power of Attorney</li>
+										    <li>Contracts</li>
+												<li>Adoption Papers</li>
+												<li>And Many Other Documents</li>
+										  </ul>
+							      </div>
+							    </div>
+							  </div>
+							  <div class="accordion-item">
+							    <h2 class="accordion-header" id="flush-headingThree">
+							      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+							        Acceptable Forms of ID:
+							      </button>
+							    </h2>
+							    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+							      <div class="accordion-body">
+											<ul class="list-unstyled">
+										    <li></li>
+										    <li>Driver's License</li>
+										    <li>State ID</li>
+										    <li>Passport</li>
+										    <li>Goverment ID</li>
+												<li>MUST BE CURRENT - NO COPIES ACCEPTED</li>
+										  </ul>
+							      </div>
+							    </div>
+							  </div>
+							</div>
+
+					</section>
 					<br>
 					<section id="contact">
 						<h2>Contact Info:</h2>
@@ -47,8 +101,9 @@
 						<a href="mailto:tlbmobilenote@gmail.com">tlbmobilenote@gmail.com</a>
 
 				</div>
-					</section>
-					
+
+				</section>
+
 							<br>
 							<!--Image for FB link-->
 							<a href="https://www.facebook.com/tlbmobilenotaryservices">
@@ -66,7 +121,16 @@
 						<p><em>Note: I am not an attorney licensed to practice law in this Commonwealth. I am not allowed to draft legal records, give advice on legal matters, including immigration, or charge a fee for those activities.</em></p>
 					</section>
 
-
+					<script
+			    src="https://code.jquery.com/jquery-3.5.1.min.js"
+			    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+			    crossorigin="anonymous"
+			  ></script>
+			  <script
+			    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+			    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+			    crossorigin="anonymous"
+			  ></script>
 	</body>
 </main>
 </html>
