--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 					<section id="services">
 				<h1>Serving your neck of the woods!</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>As a mobile notary service provider, I will travel to you. Convenience is key. If you can't leave your home for whatever reason or maybe you are at work, in a nursing facility, hospital or rehabilitation center no problem! You need documents notarized? I will be there!</p>
+				<p>Make sure you have current, valid ID (See acceptable forms of ID) and please do not sign any documents before I arrive.</p>
 
 
 					<!--Dropdowns-->
@@ -34,17 +35,19 @@
 							  <div class="accordion-item">
 							    <h2 class="accordion-header" id="flush-headingOne">
 							      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-							        Services:
+							        Services & Fees:
 							      </button>
 							    </h2>
 							    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
 							      <div class="accordion-body">
 											<ul class="list-unstyled">
-										    <li>Acknowledgements</li>
-										    <li>Oaths or affirmations</li>
-										    <li>Verification oath or affirmation (affidavits)</li>
-										    <li>Witnessing or attesting a signature</li>
-										    <li>Certifying or attesting a copy or deposition</li>
+										    <li>Travel charge - $35 (up to 20 mi)</li>
+												<li>Each additional mile - $1.00 </li>
+												<li>Acknowledgements - $5.00</li>
+										    <li>Oaths or affirmations - $5.00</li>
+										    <li>Verification oath or affirmation (affidavits) - $5.00</li>
+										    <li>Witnessing or attesting a signature - $5.00</li>
+										    <li>Certifying or attesting a copy or deposition - $5.00/copy</li>
 										  </ul>
 							      </div>
 							    </div>
