--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<section id="header"
 						<h1 class="display-1">TLB Mobile Notary</h1>
 						<hr class="my-2">
-						<p class="lead" align=center>Certified and Bonded</p>
+						<p class="lead" align=center>Commissioned and Bonded</p>
 					</section>
 					<br>
 
