--- a/index.html
+++ b/index.html
@@ -108,14 +108,20 @@
 
 				</section>
 
-							<br>
-							<!--Image for FB link-->
-							<a href="https://www.facebook.com/tlbmobilenotaryservices">
-							<img src="FBShattered.jpeg" alt="Visit my FB site" height="40">
+				<section id="contactbuttonbar"
+						<br>
+						<!--Image for FB link-->
+						<a href="https://www.facebook.com/tlbmobilenotaryservices">
+						<img src="FBShattered.jpeg" alt="Visit my FB site" height="40">
 						</a>
 
-						<a class="btn btn-secondary" href="tel:4842629278" role="button">Call me</a>
-						<a class="btn btn-secondary" href="mailto:tlbmobilenote@gmail.com" role="button">Email me</a>
+						<a href="tel:4842629278">
+						<img src="phone.png" alt="Call me @ 484-262-9278" height="40">
+						</a>
+
+					.<!--	<a class="btn btn-secondary" href="tel:4842629278" role="button">Call me</a>
+						<a class="btn btn-secondary" href="mailto:tlbmobilenote@gmail.com" role="button">Email me</a>-->
+				</section>
 
 
 					</div>
@@ -124,6 +130,14 @@
 					<section id="legaldisclaim">
 						<p><em>Note: I am not an attorney licensed to practice law in this Commonwealth. I am not allowed to draft legal records, give advice on legal matters, including immigration, or charge a fee for those activities.</em></p>
 					</section>
+
+					<section id="logobar">
+						<!--AAN Logo-->
+						<script type="text/javascript" src="https://www.notarypublicstamps.com/js/logo.small.white.js"></script>
+
+						<!--NNA Logo-->
+						<img src="https://ci4.googleusercontent.com/proxy/bYN0EdkslmfiuSD0yyoKbp-LUnkvuZtoTceEj69TCbaiEh0uHKitnk9dxt4s7G49chwIwst9smIK8-6iTkQ8fzqzc0hco7MM4Evle1Bp1OQg1vJo4E7VuTc_n3Hprpwy_hWCK3FRaJ_GiKTYj8w=s0-d-e1-ft#https://www.nationalnotary.org/Image%20Library/NNA/membership%20images/nna_member_badge.png" alt="Proud Member of National Notary Association" title="Proud Member of National Notary Association" class="CToWUd" width="100" height="100" border="0">
+				</section>
 
 					<script
 			    src="https://code.jquery.com/jquery-3.5.1.min.js"
