--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>TLB Mobile Notary</title>
+	<title>TLB Mobile Notary (PA)</title>
   <meta name="viewport" content="width=device-width; initial-scale=1;">
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -20,7 +20,8 @@
 					<section id="header"
 						<h1 class="display-1">TLB Mobile Notary</h1>
 						<hr class="my-2">
-						<p class="lead" align=center>Commissioned and Bonded</p>
+						<p class="lead" align=center>Commissioned and Bonded<br>Serving Carbon County, Pa </p>
+						<p></p>
 					</section>
 					<br>
 
@@ -99,29 +100,27 @@
 						<h2>Contact Info:</h2>
 						<ul class="list-unstyled">
 							<li>Tamara Balliet, owner</li>
-							<li>Cell Phone# (484)-262-9278</li>
+							<li>Phone# (484)-262-9278</li>
 							<li>Email: </li>
+							<li><a href="mailto:tlbmobilenote@gmail.com">tlbmobilenote@gmail.com</a></li>
 						</ul>
-						<a href="mailto:tlbmobilenote@gmail.com">tlbmobilenote@gmail.com</a>
 
-				</div>
 
-				</section>
+					</div>
 
-				<section id="contactbuttonbar"
-						<br>
-						<!--Image for FB link-->
-						<a href="https://www.facebook.com/tlbmobilenotaryservices">
-						<img src="FBShattered.jpeg" alt="Visit my FB site" height="40">
-						</a>
+					</section>
 
-						<a href="tel:4842629278">
-						<img src="phone.png" alt="Call me @ 484-262-9278" height="40">
-						</a>
-
-					.<!--	<a class="btn btn-secondary" href="tel:4842629278" role="button">Call me</a>
-						<a class="btn btn-secondary" href="mailto:tlbmobilenote@gmail.com" role="button">Email me</a>-->
-				</section>
+					<section id="contactbuttonbar"
+							<br>
+							<!--facebook link-->
+							<a href="https://www.facebook.com/tlbmobilenotaryservices">
+							<img src="FBShattered.jpeg" alt="Visit my FB site" height="40">
+							</a>
+							<!--phone link-->
+							<a href="tel:4842629278">
+							<img src="phone.png" alt="Call me @ 484-262-9278" height="40">
+							</a>
+					</section>
 
 
 					</div>
@@ -132,18 +131,23 @@
 					</section>
 
 					<section id="logobar">
-						<!--AAN Logo-->
+						<!--AAN, feather pen, Logo-->
 						<script type="text/javascript" src="https://www.notarypublicstamps.com/js/logo.small.white.js"></script>
 
-						<!--NNA Logo-->
-						<img src="https://ci4.googleusercontent.com/proxy/bYN0EdkslmfiuSD0yyoKbp-LUnkvuZtoTceEj69TCbaiEh0uHKitnk9dxt4s7G49chwIwst9smIK8-6iTkQ8fzqzc0hco7MM4Evle1Bp1OQg1vJo4E7VuTc_n3Hprpwy_hWCK3FRaJ_GiKTYj8w=s0-d-e1-ft#https://www.nationalnotary.org/Image%20Library/NNA/membership%20images/nna_member_badge.png" alt="Proud Member of National Notary Association" title="Proud Member of National Notary Association" class="CToWUd" width="100" height="100" border="0">
+						<!--NNA, triangle, Logo-->
+						<a href="https://www.nationalnotary.org">
+						<img src="NNALogo.png" alt="Visit my FB site" title="Proud Member of National Notary Association" height="100">
+						</a>
 				</section>
 
+					<!--js for accordion object-->
 					<script
 			    src="https://code.jquery.com/jquery-3.5.1.min.js"
 			    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
 			    crossorigin="anonymous"
 			  ></script>
+
+				<!--bootstrap js-->
 			  <script
 			    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
 			    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
