--- a/index.html
+++ b/index.html
@@ -9,137 +9,133 @@
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+</head>
 
 	<main id="mainborder">
 	<body>
 			<div class="container-fluid">
-			<div class="row-header">
-				<div class="col-xs-6">
-				<div class="col-xs-6">
+				<div class="row-header">
+					<div class="col-xs-6">
+					<div class="col-xs-6">
 
-					<section id="header"
-						<h1 class="display-1">TLB Mobile Notary</h1>
-						<hr class="my-2">
-						<p class="lead" align=center>Commissioned and Bonded<br>Serving Carbon County, Pa </p>
-						<p></p>
-					</section>
-					<br>
+						<section id="header">
+							<h1 class="display-1">TLB Mobile Notary</h1>
+							<hr class="my-2">
+							<p class="lead" align=center>Commissioned and Bonded<br>Serving Carbon County, Pa</p>
+							<p></p>
+						</section>
+						<br>
 
-					<section id="services">
-				<h1>Serving your neck of the woods!</h1>
-				<p>As a mobile notary service provider, I will travel to you. Convenience is key. If you can't leave your home for whatever reason or maybe you are at work, in a nursing facility, hospital or rehabilitation center no problem! You need documents notarized? I will be there!</p>
-				<p>Make sure you have current, valid ID (See acceptable forms of ID) and please do not sign any documents before I arrive.</p>
-
-
-					<!--Dropdowns-->
-					<div class="accordion accordion-flush" id="accordionFlushExample">
-							  <div class="accordion-item">
-							    <h2 class="accordion-header" id="flush-headingOne">
-							      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-							        Services & Fees:
-							      </button>
-							    </h2>
-							    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-							      <div class="accordion-body">
-											<ul class="list-unstyled">
-										    <li>Travel charge - $35 (up to 20 mi)</li>
-												<li>Each additional mile - $1.00 </li>
-												<li>Acknowledgements - $5.00</li>
-										    <li>Oaths or affirmations - $5.00</li>
-										    <li>Verification oath or affirmation (affidavits) - $5.00</li>
-										    <li>Witnessing or attesting a signature - $5.00</li>
-										    <li>Certifying or attesting a copy or deposition - $5.00/copy</li>
-										  </ul>
-							      </div>
-							    </div>
-							  </div>
-							  <div class="accordion-item">
-							    <h2 class="accordion-header" id="flush-headingTwo">
-							      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-							        Types of Documents to Notarize:
-							      </button>
-							    </h2>
-							    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-							      <div class="accordion-body">
-											<ul class="list-unstyled">
-										    <li>Notarization of any legal document</li>
-										    <li>Divorce Papers</li>
-										    <li>Address Changes</li>
-										    <li>Power of Attorney</li>
-										    <li>Contracts</li>
-												<li>Adoption Papers</li>
-												<li>And Many Other Documents</li>
-										  </ul>
-							      </div>
-							    </div>
-							  </div>
-							  <div class="accordion-item">
-							    <h2 class="accordion-header" id="flush-headingThree">
-							      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-							        Acceptable Forms of ID:
-							      </button>
-							    </h2>
-							    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-							      <div class="accordion-body">
-											<ul class="list-unstyled">
-										    <li></li>
-										    <li>Driver's License</li>
-										    <li>State ID</li>
-										    <li>Passport</li>
-										    <li>Goverment ID</li>
-												<li>MUST BE CURRENT - NO COPIES ACCEPTED</li>
-										  </ul>
-							      </div>
-							    </div>
-							  </div>
-							</div>
-
-					</section>
-					<br>
-					<section id="contact">
-						<h2>Contact Info:</h2>
-						<ul class="list-unstyled">
-							<li>Tamara Balliet, owner</li>
-							<li>Phone# (484)-262-9278</li>
-							<li>Email: </li>
-							<li><a href="mailto:tlbmobilenote@gmail.com">tlbmobilenote@gmail.com</a></li>
-						</ul>
+						<section id="services">
+							<h1>Serving your neck of the woods!</h1>
+							<p>As a mobile notary service provider, I will travel to you. Convenience is key. If you can't leave your home for whatever reason or maybe you are at work, in a nursing facility, hospital or rehabilitation center no problem! You need documents notarized? I will be there!</p>
+							<p>Make sure you have current, valid ID (See acceptable forms of ID) and please do not sign any documents before I arrive.</p>
 
 
-					</div>
+						<!--Dropdowns-->
+						<div class="accordion accordion-flush" id="accordionFlushExample">
+								  <div class="accordion-item">
+								    <h2 class="accordion-header" id="flush-headingOne">
+								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+								        Services & Fees:
+								      </button>
+								    </h2>
+								    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+								      <div class="accordion-body">
+												<ul class="list-unstyled">
+											    <li>Travel charge - $35 (up to 20 mi)</li>
+													<li>Each additional mile - $1.00 </li>
+													<li>Acknowledgements - $5.00</li>
+											    <li>Oaths or affirmations - $5.00</li>
+											    <li>Verification oath or affirmation (affidavits) - $5.00</li>
+											    <li>Witnessing or attesting a signature - $5.00</li>
+											    <li>Certifying or attesting a copy or deposition - $5.00/copy</li>
+											  </ul>
+								      </div>
+								    </div>
+								  </div>
+								  <div class="accordion-item">
+								    <h2 class="accordion-header" id="flush-headingTwo">
+								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+								        Types of Documents to Notarize:
+								      </button>
+								    </h2>
+								    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+								      <div class="accordion-body">
+												<ul class="list-unstyled">
+											    <li>Notarization of any legal document</li>
+											    <li>Divorce Papers</li>
+											    <li>Address Changes</li>
+											    <li>Power of Attorney</li>
+											    <li>Contracts</li>
+													<li>Adoption Papers</li>
+													<li>Advanced Directive</li>
+													<li>And Many Other Documents</li>
+											  </ul>
+								      </div>
+								    </div>
+								  </div>
+								  <div class="accordion-item">
+								    <h2 class="accordion-header" id="flush-headingThree">
+								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+								        Acceptable Forms of ID:
+								      </button>
+								    </h2>
+								    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+								      <div class="accordion-body">
+												<ul class="list-unstyled">
+											    <li></li>
+											    <li>Driver's License</li>
+											    <li>State ID</li>
+											    <li>Passport</li>
+											    <li>Goverment ID</li>
+													<li>MUST BE CURRENT - NO COPIES ACCEPTED</li>
+											  </ul>
+								      </div>
+								    </div>
+								  </div>
+								</div>
+						</section>
+						<br>
+						<section id="contact">
+							<h2>Contact Info:</h2>
+							<ul class="list-unstyled">
+								<li>Tamara Balliet, owner</li>
+								<li>Phone# (484)-262-9278</li>
+								<li>Email: </li>
+								<li><a href="mailto:tlbmobilenote@gmail.com">tlbmobilenote@gmail.com</a></li>
+							</ul>
+						</div>
+						</section>
 
-					</section>
-
-					<section id="contactbuttonbar"
+						<section id="contactbuttonbar">
 							<br>
 							<!--facebook link-->
 							<a href="https://www.facebook.com/tlbmobilenotaryservices">
-							<img src="FBShattered.jpeg" alt="Visit my FB site" height="40">
+							<img src="FBShattered.jpeg" alt="Visit my FB site" height="55">
 							</a>
 							<!--phone link-->
 							<a href="tel:4842629278">
-							<img src="phone.png" alt="Call me @ 484-262-9278" height="40">
+							<img src="phone.png" alt="Call me @ 484-262-9278" height="55">
 							</a>
-					</section>
+						</section>
 
+						<section id="legaldisclaim">
+							<p><em>Note: I am not an attorney licensed to practice law in this Commonwealth. I am not allowed to draft legal records, give advice on legal matters, including immigration, or charge a fee for those activities.</em></p>
+						</section>
 
+						<section id="logobar">
+							<!--AAN, feather pen, Logo-->
+							<script type="text/javascript" src="https://www.notarypublicstamps.com/js/logo.small.white.js"></script>
+
+							<!--NNA, triangle, Logo-->
+							<a href="https://www.nationalnotary.org">
+							<img src="NNALogo.png" alt="Visit my FB site" title="Proud Member of National Notary Association" height="100">
+							</a>
+						</section>
 					</div>
 				</div>
 			</div>
-					<section id="legaldisclaim">
-						<p><em>Note: I am not an attorney licensed to practice law in this Commonwealth. I am not allowed to draft legal records, give advice on legal matters, including immigration, or charge a fee for those activities.</em></p>
-					</section>
-
-					<section id="logobar">
-						<!--AAN, feather pen, Logo-->
-						<script type="text/javascript" src="https://www.notarypublicstamps.com/js/logo.small.white.js"></script>
-
-						<!--NNA, triangle, Logo-->
-						<a href="https://www.nationalnotary.org">
-						<img src="NNALogo.png" alt="Visit my FB site" title="Proud Member of National Notary Association" height="100">
-						</a>
-				</section>
-
 					<!--js for accordion object-->
 					<script
 			    src="https://code.jquery.com/jquery-3.5.1.min.js"
