accordion icon additions

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								  <div class="accordion-item">
 								    <h2 class="accordion-header" id="flush-headingOne">
 								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-								        Services & Fees:
+								        <img alt="service icon" id="accordionicons" src="company-services.png"/>    Services & Fees:
 								      </button>
 								    </h2>
 								    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -57,7 +57,8 @@
 								  <div class="accordion-item">
 								    <h2 class="accordion-header" id="flush-headingTwo">
 								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-								        Types of Documents to Notarize:
+								        <img id="accordionicons" src="text-documents-line.png"/>
+												Types of Documents to Notarize:
 								      </button>
 								    </h2>
 								    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
@@ -78,7 +79,8 @@
 								  <div class="accordion-item">
 								    <h2 class="accordion-header" id="flush-headingThree">
 								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-								        Acceptable Forms of ID:
+								        <img id="accordionicons" src="id-proof-line.png"/>
+												Acceptable Forms of ID:
 								      </button>
 								    </h2>
 								    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
@@ -90,6 +92,26 @@
 											    <li>Passport</li>
 											    <li>Goverment ID</li>
 													<li>MUST BE CURRENT - NO COPIES ACCEPTED</li>
+											  </ul>
+								      </div>
+								    </div>
+								  </div>
+									<div class="accordion-item">
+								    <h2 class="accordion-header" id="flush-headingFour">
+								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+								        <img id="accordionicons" src="mobile-money-transfer.png"/>
+												Payment Types Accepted:
+								      </button>
+								    </h2>
+								    <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+								      <div class="accordion-body">
+												<ul class="list-unstyled">
+														<li></li>
+												    <li><img id="amex" src="americanexpress.png"/></li>
+												    <li><img id="mcicon" src="mastercard.png"/></li>
+														<li><img id="vicon" src="visa.png"/></li>
+														<li><img id="ppicon" src="paypal.png"/></li>
+														<li><img id="vmicon" src="venmo.png"/></li
 											  </ul>
 								      </div>
 								    </div>
@@ -112,8 +134,9 @@
 							<br>
 							<!--facebook link-->
 							<a href="https://www.facebook.com/tlbmobilenotaryservices">
-							<img src="FBShattered.jpeg" alt="Visit my FB site" height="55">
+							<img id="fbicon" src="FBShattered.jpeg" alt="Visit my FB site" height="55">
 							</a>
+
 							<!--phone link-->
 							<a href="tel:4842629278">
 							<img src="phone.png" alt="Call me @ 484-262-9278" height="55">
@@ -121,7 +144,7 @@
 						</section>
 
 						<section id="legaldisclaim">
-							<p><em>Note: I am not an attorney licensed to practice law in this Commonwealth. I am not allowed to draft legal records, give advice on legal matters, including immigration, or charge a fee for those activities.</em></p>
+							<p><em>Note: I am not an attorney licensed to practice law in this Commonwealth. I am not allowed to draft legal records, give advice on legal matters or charge a fee for those activities.</em></p>
 						</section>
 
 						<section id="logobar">
