I am not allowed to --cannot

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<div class="col-xs-6">
 
 						<section id="header">
-							<h1 class="display-1">TLB Mobile Notary</h1>
+							<h1 class="display-1">TLB Mobile Notary Services</h1>
 							<hr class="my-2">
 							<p class="lead" align=center>Commissioned and Bonded<br>Serving Carbon County, Pa</p>
 							<p></p>
@@ -144,7 +144,7 @@
 						</section>
 
 						<section id="legaldisclaim">
-							<p><em>Note: I am not an attorney licensed to practice law in this Commonwealth. I am not allowed to draft legal records, give advice on legal matters or charge a fee for those activities.</em></p>
+							<p><em>Note: I am not an attorney licensed to practice law in this Commonwealth. I cannot draft legal records, give advice on legal matters or charge a fee for those activities.</em></p>
 						</section>
 
 						<section id="logobar">
@@ -153,7 +153,7 @@
 
 							<!--NNA, triangle, Logo-->
 							<a href="https://www.nationalnotary.org">
-							<img src="NNALogo.png" alt="Visit my FB site" title="Proud Member of National Notary Association" height="100">
+							<img src="nna_member_badge.png" alt="NNA loco" title="Proud Member of National Notary Association" height="110">
 							</a>
 						</section>
 					</div>
