--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<section id="header">
 							<h1 class="display-1">TLB Mobile Notary Services</h1>
 							<hr class="my-2">
-							<p class="lead" align=center>Commissioned and Bonded<br>Serving Carbon County, Pa</p>
+							<p class="lead" align=center>Commissioned, Bonded & Insured<br>Serving Carbon County, Pa</p>
 							<p></p>
 						</section>
 						<br>
@@ -30,6 +30,11 @@
 							<h1>Serving your neck of the woods!</h1>
 							<p>As a mobile notary service provider, I will travel to you. Convenience is key. If you can't leave your home for whatever reason or maybe you are at work, in a nursing facility, hospital or rehabilitation center no problem! You need documents notarized? I will be there!</p>
 							<p>Make sure you have current, valid ID (See acceptable forms of ID) and please do not sign any documents before I arrive.</p>
+
+						<p>Click for Service & Fee download:<p>
+						<a href="Service&Fees.pdf" download="s&f">
+						  <img src="download-pdf.png" alt="W3Schools" width="50" height="50">
+						</a>
 
 
 						<!--Dropdowns-->
