--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 						<p>Click for Service & Fee download:<p>
 						<a href="Service&Fees.pdf" download="s&f">
-						  <img src="download-pdf.png" alt="W3Schools" width="50" height="50">
+						  <img src="download-pdf.png" alt="pdf download" width="50" height="50">
 						</a>
 
 
