--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<p>Make sure you have current, valid ID (See acceptable forms of ID) and please do not sign any documents before I arrive.</p>
 
 						<p>Click for Service & Fee download:<p>
-						<a href="Service&Fees.pdf" download="s&f">
+						<a href="Service&Fees.pdf" download="TLB_Services&Fees.pdf">
 						  <img src="download-pdf.png" alt="pdf download" width="50" height="50">
 						</a>
 
@@ -48,7 +48,7 @@
 								    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
 								      <div class="accordion-body">
 												<ul class="list-unstyled">
-											    <li>Travel charge - $35 (up to 20 mi)</li>
+											    <li>Travel charge - See PDF for current</li>
 													<li>Each additional mile - $1.00 </li>
 													<li>Acknowledgements - $5.00</li>
 											    <li>Oaths or affirmations - $5.00</li>
@@ -110,14 +110,16 @@
 								    </h2>
 								    <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
 								      <div class="accordion-body">
-												<ul class="list-unstyled">
-														<li></li>
-												    <li><img id="amex" src="americanexpress.png"/></li>
-												    <li><img id="mcicon" src="mastercard.png"/></li>
-														<li><img id="vicon" src="visa.png"/></li>
-														<li><img id="ppicon" src="paypal.png"/></li>
-														<li><img id="vmicon" src="venmo.png"/></li
-											  </ul>
+											  <p>
+													<img id="amex" src="americanexpress.png">
+													<img id="mcicon" src="mastercard.png">
+													<img id="vicon" src="visa.png">
+													<img id="ppicon" src="paypal.png">
+													<img id="vmicon" src="discover.png">
+													<img id="vmicon" src="apple-pay.png">
+													<img id="vmicon" src="google-pay.png">
+													<img id="vmicon" src="venmo.png">
+												</p>
 								      </div>
 								    </div>
 								  </div>
@@ -130,7 +132,8 @@
 								<li>Tamara Balliet, owner</li>
 								<li>Phone# (484)-262-9278</li>
 								<li>Email: </li>
-								<li><a href="mailto:tlbmobilenote@gmail.com">tlbmobilenote@gmail.com</a></li>
+								<li><a
+									href="mailto:tlbmobilenote@gmail.com">tlbmobilenote@gmail.com</a></li>
 							</ul>
 						</div>
 						</section>
