--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>TLB Mobile Notary (PA)</title>
+	<title>SANDBOX TLB Mobile Notary (PA)</title>
   <meta name="viewport" content="width=device-width; initial-scale=1;">
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -13,8 +13,9 @@
 
 	<main id="mainborder">
 	<body>
+		<!--Find better solution for image background placement!!!-->
+		<div class="row-header"></>
 			<div class="container-fluid">
-				<div class="row-header">
 					<div class="col-xs-6">
 					<div class="col-xs-6">
 
@@ -22,7 +23,6 @@
 							<h1 class="display-1">TLB Mobile Notary Services</h1>
 							<hr class="my-2">
 							<p class="lead" align=center>Commissioned, Bonded & Insured<br>Serving Carbon County, Pa</p>
-							<p></p>
 						</section>
 						<br>
 
@@ -32,8 +32,8 @@
 							<p>Make sure you have current, valid ID (See acceptable forms of ID) and please do not sign any documents before I arrive.</p>
 
 						<p>Click for Service & Fee download:<p>
-						<a href="Service&Fees.pdf" download="TLB_Services&Fees.pdf">
-						  <img src="download-pdf.png" alt="pdf download" width="50" height="50">
+						<a href="assets/Service&Fees.pdf" download="TLB_Services&Fees.pdf">
+						  <img src="assets/download-pdf.png" alt="pdf download" width="50" height="50">
 						</a>
 
 
@@ -42,19 +42,19 @@
 								  <div class="accordion-item">
 								    <h2 class="accordion-header" id="flush-headingOne">
 								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-								        <img alt="service icon" id="accordionicons" src="company-services.png"/>    Services & Fees:
+								        <img alt="service icon" id="accordionicons" src="assets/company-services.png"/>    Services & Fees:
 								      </button>
 								    </h2>
 								    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
 								      <div class="accordion-body">
 												<ul class="list-unstyled">
 											    <li>Travel charge - See PDF for current</li>
-													<li>Each additional mile - $1.00 </li>
 													<li>Acknowledgements - $5.00</li>
 											    <li>Oaths or affirmations - $5.00</li>
 											    <li>Verification oath or affirmation (affidavits) - $5.00</li>
 											    <li>Witnessing or attesting a signature - $5.00</li>
 											    <li>Certifying or attesting a copy or deposition - $5.00/copy</li>
+													<li>Veteran Discount</li>
 											  </ul>
 								      </div>
 								    </div>
@@ -62,7 +62,7 @@
 								  <div class="accordion-item">
 								    <h2 class="accordion-header" id="flush-headingTwo">
 								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-								        <img id="accordionicons" src="text-documents-line.png"/>
+								        <img id="accordionicons" src="assets/text-documents-line.png"/>
 												Types of Documents to Notarize:
 								      </button>
 								    </h2>
@@ -84,7 +84,7 @@
 								  <div class="accordion-item">
 								    <h2 class="accordion-header" id="flush-headingThree">
 								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-								        <img id="accordionicons" src="id-proof-line.png"/>
+								        <img id="accordionicons" src="assets/id-proof-line.png"/>
 												Acceptable Forms of ID:
 								      </button>
 								    </h2>
@@ -104,21 +104,21 @@
 									<div class="accordion-item">
 								    <h2 class="accordion-header" id="flush-headingFour">
 								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-								        <img id="accordionicons" src="mobile-money-transfer.png"/>
+								        <img id="accordionicons" src="assets/mobile-money-transfer.png"/>
 												Payment Types Accepted:
 								      </button>
 								    </h2>
 								    <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
 								      <div class="accordion-body">
 											  <p>
-													<img id="amex" src="americanexpress.png">
-													<img id="mcicon" src="mastercard.png">
-													<img id="vicon" src="visa.png">
-													<img id="ppicon" src="paypal.png">
-													<img id="vmicon" src="discover.png">
-													<img id="vmicon" src="apple-pay.png">
-													<img id="vmicon" src="google-pay.png">
-													<img id="vmicon" src="venmo.png">
+													<img id="axicon" src="assets/americanexpress.png">
+													<img id="mcicon" src="assets/mastercard.png">
+													<img id="vsicon" src="assets/visa.png">
+													<img id="ppicon" src="assets/paypal.png">
+													<img id="dcicon" src="assets/discover.png">
+													<img id="apicon" src="assets/apple-pay.png">
+													<img id="goicon" src="assets/google-pay.png">
+													<img id="vmicon" src="assets/venmo.png">
 												</p>
 								      </div>
 								    </div>
@@ -142,12 +142,12 @@
 							<br>
 							<!--facebook link-->
 							<a href="https://www.facebook.com/tlbmobilenotaryservices">
-							<img id="fbicon" src="FBShattered.jpeg" alt="Visit my FB site" height="55">
+							<img id="fbicon" src="assets/FBShattered.jpeg" alt="Visit my FB site" height="55">
 							</a>
 
 							<!--phone link-->
 							<a href="tel:4842629278">
-							<img src="phone.png" alt="Call me @ 484-262-9278" height="55">
+							<img src="assets/phone.png" alt="Call me @ 484-262-9278" height="55">
 							</a>
 						</section>
 
@@ -161,12 +161,12 @@
 
 							<!--NNA, triangle, Logo-->
 							<a href="https://www.nationalnotary.org">
-							<img src="nna_member_badge.png" alt="NNA loco" title="Proud Member of National Notary Association" height="110">
+							<img src="assets/nna_member_badge.png" alt="NNA loco" title="Proud Member of National Notary Association" height="110">
 							</a>
 						</section>
 					</div>
 				</div>
-			</div>
+
 					<!--js for accordion object-->
 					<script
 			    src="https://code.jquery.com/jquery-3.5.1.min.js"
