payicon padding, add pdf href

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
 								      <div class="accordion-body">
 												<ul class="list-unstyled">
-											    <li>Travel charge - See PDF for current</li>
+											    <li>Travel charge - See <a href="assets/Service&Fees.pdf">PDF</a> for current</li>
 													<li>Acknowledgements - $5.00</li>
 											    <li>Oaths or affirmations - $5.00</li>
 											    <li>Verification oath or affirmation (affidavits) - $5.00</li>
