verbage correct, flex for payicons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 						<section id="services">
 							<h1>Serving your neck of the woods!</h1>
-							<p>As a mobile notary service provider, I will travel to you. Convenience is key. If you can't leave your home for whatever reason or maybe you are at work, in a nursing facility, hospital or rehabilitation center no problem! You need documents notarized? I will be there!</p>
+							<p>As a mobile notary service provider, If you can't leave your home for whatever reason, I will travel to you. <br>Customer Convenience is key. Maybe you are at work, in a nursing facility, hospital or rehabilitation center...You need documents notarized? I will be there no problem!</p>
 							<p>Make sure you have current, valid ID (See acceptable forms of ID) and please do not sign any documents before I arrive.</p>
 
 						<p>Click for Service & Fee download:<p>
@@ -109,7 +109,7 @@
 								      </button>
 								    </h2>
 								    <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-								      <div class="accordion-body">
+								      <div class="accordion-body-flex">
 											  <p>
 													<img id="axicon" src="assets/americanexpress.png">
 													<img id="mcicon" src="assets/mastercard.png">
