--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>SANDBOX TLB Mobile Notary (PA)</title>
+	<title>TLB Mobile Notary (PA)</title>
   <meta name="viewport" content="width=device-width; initial-scale=1;">
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -32,7 +32,7 @@
 							<p>Make sure you have current, valid ID (See acceptable forms of ID) and please do not sign any documents before I arrive.</p>
 
 						<p>Click for Service & Fee download:<p>
-						<a href="assets/Service&Fees.pdf" download="TLB_Services&Fees.pdf">
+						<a href="assets/Services&Fees.pdf" download="TLB_Services&Fees.pdf">
 						  <img src="assets/download-pdf.png" alt="pdf download" width="50" height="50">
 						</a>
 
