Viewport, icon changes
Added min vh 100%. Fixes empty bottom space on large devices.
Removed AAN script. replaced with local asset.
Changed Veteran to Military discount.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 											    <li>Verification oath or affirmation (affidavits) - $5.00</li>
 											    <li>Witnessing or attesting a signature - $5.00</li>
 											    <li>Certifying or attesting a copy or deposition - $5.00/copy</li>
-													<li>Veteran Discount</li>
+													<li>Military Discount</li>
 											  </ul>
 								      </div>
 								    </div>
@@ -154,14 +154,17 @@
 						<section id="legaldisclaim">
 							<p><em>Note: I am not an attorney licensed to practice law in this Commonwealth. I cannot draft legal records, give advice on legal matters or charge a fee for those activities.</em></p>
 						</section>
-
+						<h3>Memberships:</h3>
 						<section id="logobar">
 							<!--AAN, feather pen, Logo-->
-							<script type="text/javascript" src="https://www.notarypublicstamps.com/js/logo.small.white.js"></script>
+
+							<a href="https://www.notarypublicstamps.com/">
+							<img src="/assets/aan-logo-transparent.png" alt="AAN logo" title="Proud Member of American Association of Notaries" height="90">
+							</a>
 
 							<!--NNA, triangle, Logo-->
 							<a href="https://www.nationalnotary.org">
-							<img src="assets/nna_member_badge.png" alt="NNA loco" title="Proud Member of National Notary Association" height="110">
+							<img src="assets/nna_member_badge.png" alt="NNA logo" title="Proud Member of National Notary Association" height="95">
 							</a>
 						</section>
 					</div>
