Link Githyb to Atom, Compress background image

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
 						<section id="logobar">
 							<!--AAN, feather pen, Logo-->
 
-							<!--NSA Cert Logo-->
+							<!--Membership Cert Badges-->
 							<a href="https://www.nationalnotary.org">
-							<img src="assets/nsa_member_badge.png" alt="NNA logo" title="Proud Member of National Notary Association" height="60">
+							<img src="assets/nsa_member_badge.png" alt="NNA logo" title="Proud Member of National Notary Association" height=100">
 							</a>
 
 							<!--NSA, Trained & background checked, Logo-->
@@ -171,12 +171,12 @@
 							</a>
 
 							<a href="https://www.notarypublicstamps.com/">
-							<img src="/assets/aan-logo-transparent.png" alt="AAN logo" title="Proud Member of American Association of Notaries" height="60">
+							<img src="/assets/aan-logo-transparent.png" alt="AAN logo" title="Proud Member of American Association of Notaries" height="80">
 							</a>
 
 							<!--NNA, triangle, Logo-->
 							<a href="https://www.nationalnotary.org">
-							<img src="assets/nna_member_badge.png" alt="NNA logo" title="Proud Member of National Notary Association" height="60">
+							<img src="assets/nna_member_badge.png" alt="NNA logo" title="Proud Member of National Notary Association" height="80">
 							</a>
 
 						</section>
