--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 	</head>
 
-	<main id="mainborder">
 	<body>
 
 		<!--Find better solution for image background placement!!!-->
@@ -28,7 +27,7 @@
 
 						<section id="services">
 							<h1>Serving your neck of the woods!</h1>
-							<p>As a mobile notary service provider, If you can't leave your home for whatever reason, I will travel to you. <br>Customer convenience is key. Maybe you are at work, in a nursing facility, hospital or rehabilitation center...You need documents notarized? I will be there no problem!</p>
+							<p>As a mobile notary service provider, if you can't leave your home for whatever reason, I will travel to you. <br>Customer convenience is key. Maybe you are at work, in a nursing facility, hospital or rehabilitation center...You need documents notarized? I will be there no problem!</p>
 							<p>Make sure you have current, valid ID (See acceptable forms of ID) and please do not sign any documents before I arrive.</p>
 
 						<p>Click for Service & Fee download:<p>
@@ -197,5 +196,4 @@
 			    crossorigin="anonymous"
 			  ></script>
 	</body>
-</main>
 </html>
