--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<section id="header">
 							<h1 class="display-1">TLB Mobile Notary Services</h1>
 							<hr class="my-2">
-							<p class="lead" align=center>Commissioned, Bonded & Insured<br>Serving Carbon County, Pa</p>
+							<h4>Commissioned, Bonded & Insured<br>Serving Carbon County, Pa</h4>
 						</section>
 						<br>
 
@@ -128,7 +128,7 @@
 						</section>
 						<br>
 						<section id="contact">
-							<h2>Contact Info:</h2>
+							<h2>Contact Info:</h4>
 							<ul class="list-unstyled">
 								<li>Tamara Balliet, owner</li>
 								<li>Phone# (484)-262-9278</li>
