--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<br>
 
 						<section id="services">
-							<h1>Serving your neck of the woods!</h1>
+							<h1>Bringing the Notary to You!</h1>
 							<p>As a mobile notary service provider, if you can't leave your home for whatever reason, I will travel to you. <br>Customer convenience is key. Maybe you are at work, in a nursing facility, hospital or rehabilitation center...You need documents notarized? I will be there no problem!</p>
 							<p>Make sure you have current, valid ID (See acceptable forms of ID) and please do not sign any documents before I arrive.</p>
 
@@ -128,7 +128,7 @@
 						</section>
 						<br>
 						<section id="contact">
-							<h2>Contact Info:</h4>
+							<h2>Contact Info:</h2>
 							<ul class="list-unstyled">
 								<li>Tamara Balliet, owner</li>
 								<li>Phone# (484)-262-9278</li>
