--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								  <div class="accordion-item">
 								    <h2 class="accordion-header" id="flush-headingTwo">
 								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-								        <img id="accordionicons" src="assets/text-documents-line.png"/>
+								        <img id="accordionicons" src="assets/text-documents-line.png" alt="accordion document picture"/>
 												Types of Documents to Notarize:
 								      </button>
 								    </h2>
@@ -85,7 +85,7 @@
 								  <div class="accordion-item">
 								    <h2 class="accordion-header" id="flush-headingThree">
 								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-								        <img id="accordionicons" src="assets/id-proof-line.png"/>
+								        <img id="accordionicons" src="assets/id-proof-line.png" alt="accordion ID card picture"/>
 												Acceptable Forms of ID:
 								      </button>
 								    </h2>
@@ -105,7 +105,7 @@
 									<div class="accordion-item">
 								    <h2 class="accordion-header" id="flush-headingFour">
 								      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-								        <img id="accordionicons" src="assets/mobile-money-transfer.png"/>
+								        <img id="accordionicons" src="assets/mobile-money-transfer.png" alt="accordion mobile money transfer picture"/>
 												Payment Types Accepted:
 								      </button>
 								    </h2>
