Corrected Meta description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>TLB Mobile Notary (PA)</title>
-	<meta name="description" content="Tamara L. Balliet, Mobile Notary in Pennsylvania. Travels to your location to provide notary services. Note: does not provide PENNDOT registration services.">
+	<meta name="description" content="Tamara L. Balliet, Mobile Notary in Pennsylvania. Travels to your location to provide notary services.">
   <meta name="viewport" content="width=device-width; initial-scale=1;">
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
